<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/login_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:id="@+id/loginlogo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/loginlogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:id="@+id/user_name"
            android:hint="@string/nav_username"
            style="@style/Widget.AppCompat.EditText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/user_name"
            android:layout_alignLeft="@+id/user_name"
            android:layout_alignStart="@+id/user_name"
            android:id="@+id/register_email"
            android:hint="@string/hint_email"
            style="@style/Widget.AppCompat.EditText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/register_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/register_password"
            android:hint="@string/hint_password"
            style="@style/Widget.AppCompat.EditText" />

        <Button
            android:text="@string/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_below="@+id/register_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/startscreen_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:id="@+id/textView_register" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_register"
            android:layout_centerHorizontal="true"
            android:id="@+id/progressBar_register"
            android:visibility="gone" />


    </RelativeLayout>
</ScrollView>