<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/login_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:id="@+id/loginlogo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/loginlogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:id="@+id/login_email"
            android:hint="@string/hint_email"
            style="@style/Widget.AppCompat.EditText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/login_email"
            android:layout_centerHorizontal="true"
            android:id="@+id/login_password"
            android:hint="@string/hint_password"
            style="@style/Widget.AppCompat.EditText" />

        <Button
            android:text="@string/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password"
            android:layout_centerHorizontal="true"
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Colored" />

        <TextView
            android:text="@string/startscreen_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:id="@+id/textView_login" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_login"
            android:layout_centerHorizontal="true"
            android:id="@+id/progressBar_login"
            android:visibility="gone" />

    </RelativeLayout>
</ScrollView>